--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="textSizeExtraLarge">25sp</dimen>
     <dimen name="textSizeLarge">20sp</dimen>
     <dimen name="textSizeRegular">18sp</dimen>
+    <dimen name="suggestion_item_height">60dp</dimen>
 </resources>
